--- a/templates/index.html
+++ b/templates/index.html
@@ -34,15 +34,23 @@
                 display: flex;
                 align-items: center;
               }
-            #imageContainer {
+            <!-- #imageContainer {
                 position: relative;
                 text-align: center;
                 width: 500px; /* Set the width of the container */
                 height: 300px; /* Set the height of the container */
                 overflow: hidden; /* Ensure the image does not overflow */
                 margin: auto; /* Center the container horizontally */
-              }
-          
+              } -->
+            #imageContainer {
+                position: relative;
+                text-align: center;
+                width: 80%; /* Set the width of the container as a percentage */
+                max-width: 500px; /* Set a maximum width if needed */
+                height: auto; /* Let the height adjust automatically */
+                overflow: hidden; /* Ensure the image does not overflow */
+                margin: auto; /* Center the container horizontally */
+            }
             #imageDisplay {
                 width: 100%;
                 height: 100%;
@@ -55,6 +63,7 @@
                 padding: 20px;
                 box-sizing: border-box;
                 text-align: left;
+                position: relative;
               }
           
             #textOverlay {
